corrected modal footer alert text alignment, added hover class and added large tooltip class for servicetexts

--- a/src/styles/less/app.less
+++ b/src/styles/less/app.less
@@ -69,6 +69,23 @@ button.btn.btn-default.toggle-side {
 	overflow-y: auto;
 }
 
+.modal-footer {
+	.alert {
+		text-align: left;
+	}
+}
+
+.large-tooltip {
+	.tooltip-inner {
+		text-align: left;
+		max-width: 100vw;
+	}
+}
+
+.hover {
+	cursor: pointer;
+}
+
 // SPINNER
 .page-splash {
 	z-index: 99999 !important;
